--- a/config/heroku.yml
+++ b/config/heroku.yml
@@ -7,16 +7,16 @@
 #     - <Heroku config:var name>: <Heroku config:var value>
 #
 production:
-  app: rake-cache-test
+  app: rack-cache-test
   config:
     BUNDLE_WITHOUT: "development:test"
     GOOGLE_ANALYTICS: "UA-12345678-1"
 
 staging:
-  app: rake-cache-test
+  app: rack-cache-test
   config: &default
     BUNDLE_WITHOUT: "development:test"
 
 demo:
-  app: rake-cache-test
+  app: rack-cache-test
   config: *default
